--- a/index.html
+++ b/index.html
@@ -1,17 +1,59 @@
 <!DOCTYPE html>
 <html>
     <head>
-      <title>Example</title>
+      <link rel="stylesheet" href="app/styles/index.scss">
+      <title>Tic Tac Toe</title>
       <meta name="viewport" content="width=device-width, initial-scale=1">
-
-      <!-- Do not add `link` tags-->
       <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
-
-      <!-- Do not add `script` tags-->
       <script src="public/vendor.js" type="text/javascript" charset="utf-8" defer></script>
       <script src="public/application.js" type="text/javascript" charset="utf-8" defer></script>
     </head>
     <body>
-      <h1>Browser Template</h1>
+      <h1>Tic Tac Toe</h1>
+      <br>
+      <form id = "sign-up">
+        <label>NEW USER</label>
+        <input name="credentials[email]" type="text">
+        <input name="credentials[password]" type="password">
+        <input name="credentials[password_confirmation]" type="password">
+        <input type="submit" value="Sign Up">
+      </form>
+      <br>
+      <form id="sign-in">
+        <label>RETURNING USER</label>
+        <input name="credentials[email]" type="text">
+        <input name="credentials[password]" type="password">
+        <input type="submit" value="Sign In">
+      </form>
+      <br>
+      <button id="sign-out">
+        <label>SIGN OUT</label>
+        <input name="credentials[email]" type="text">
+      <input type="submit" value="Sign Out">
+      <div></div>
+      <button>
+        <label>NEW GAME</label>
+      </button>
+      <br>
+      <br>
+      <br>
+      <br>
+      <div class="btn-group">
+        <button>X</button>
+        <button>O</button>
+        <button>X</button>
+      </div>
+      <br>
+      <div class="btn-group">
+        <button>O</button>
+        <button>X</button>
+        <button>O</button>
+      </div>
+      <br>
+      <div class="btn-group">
+        <button>X</button>
+        <button>O</button>
+        <button>X</button>
+      </div>
     </body>
 </html>
