--- a/index.html
+++ b/index.html
@@ -9,51 +9,39 @@
       <script src="public/application.js" type="text/javascript" charset="utf-8" defer></script>
     </head>
     <body>
+      <div class = "anonymous">
+      <p id="message"></p>
       <h1>Tic Tac Toe</h1>
       <br>
+      <div class="new_user">
       <form id = "sign-up">
         <label>NEW USER</label>
         <input name="credentials[email]" type="text">
         <input name="credentials[password]" type="password">
         <input name="credentials[password_confirmation]" type="password">
         <input type="submit" value="Sign Up">
+      </div>
       </form>
       <br>
+      <div class="returning_user">
       <form id="sign-in">
         <label>RETURNING USER</label>
         <input name="credentials[email]" type="text">
         <input name="credentials[password]" type="password">
         <input type="submit" value="Sign In">
       </form>
+    </div>
       <br>
-      <button id="sign-out">
-        <label>SIGN OUT</label>
-        <input name="credentials[email]" type="text">
-      <input type="submit" value="Sign Out">
-      <div></div>
+    <div class="signed_in_user">
+      <button id="sign-out" type="button"> Sign Out</button>
+      <br>
+      <br>
       <button>
         <label>NEW GAME</label>
+      <br>
       </button>
       <br>
       <br>
-      <br>
-      <br>
-      <div class="btn-group">
-        <button>X</button>
-        <button>O</button>
-        <button>X</button>
-      </div>
-      <br>
-      <div class="btn-group">
-        <button>O</button>
-        <button>X</button>
-        <button>O</button>
-      </div>
-      <br>
-      <div class="btn-group">
-        <button>X</button>
-        <button>O</button>
-        <button>X</button>
-      </div>
     </body>
+  </div>
 </html>
