commit 4 - added functionality to board show/hide

--- a/index.html
+++ b/index.html
@@ -11,12 +11,13 @@
     <body>
       <h1>Tic Tac Toe</h1>
       <br>
+<!-- add placeholders for each form field  -->
       <div class="new_user">
       <form id = "sign-up">
         <label>Register</label>
-        <input name="credentials[email]" type="text">
-        <input name="credentials[password]" type="password">
-        <input name="credentials[password_confirmation]" type="password">
+        <input name="credentials[email]" type="text" placeholder = "email">
+        <input name="credentials[password]" type="password" placeholder = "password">
+        <input name="credentials[password_confirmation]" type="password" placeholder = "confirm password">
         <input type="submit" value="Sign Up">
       </form>
       </div>
@@ -24,8 +25,8 @@
       <div class="returning_user">
       <form id="sign-in">
         <label>Sign In</label>
-        <input name="credentials[email]" type="text">
-        <input name="credentials[password]" type="password">
+        <input name="credentials[email]" type="text" placeholder="email">
+        <input name="credentials[password]" type="password" placeholder="password">
         <input type="submit" value="Sign In">
       </form>
     </div>
@@ -36,7 +37,7 @@
       <br>
       <br>
     <button id="new-game">NEW GAME</button>
-    
+    </div>
     <br/>
     <br/>
     <section class='container'>
@@ -79,7 +80,7 @@
     </div> -->
 
  
-  <section class='container'>
+  <!-- <section class='container'>
     <div class='row h-100 board'>
       <div class="col-4 box"></div>
       <div class="col-4 box"></div>
@@ -93,7 +94,7 @@
       <div class="col-4 box"></div>
       <div class="col-4 box"></div>
      </div>
-    </section>
+    </section> -->
   </body>
 
 </html>
